# MxCompiler

./: .gitignore  CMakeLists.txt  README.md  bugs.md  configure  run-codegen.bash  run-llvm.bash  run-risc-v.bash  test.txt
MxAntlr/: CMakeLists.txt  MxLexer.cpp  MxLexer.h  MxLexer.interp  MxParser.cpp  MxParser.h  MxParser.interp  MxParserBaseVisitor.cpp  MxParserBaseVisitor.h  MxParserVisitor.cpp  MxParserVisitor.h
antlr4/: MxLexer.g4  MxParser.g4
antlr4/.antlr/: MxLexer.interp  MxLexer.java  MxParser.interp  MxParser.java  MxParser.tokens
src/: test.cpp
src/ASM/: ASMBuilder.cpp  ASMBuilder.h  ASMNode.cpp  ASMNode.h
src/AST/: ASTBaseVisitor.h  ASTBuilder.cpp  ASTBuilder.h  ASTDeclaration.h  ASTNode.h  print.cpp  test.cpp
src/IR/: IRBaseVisitor.h  IRBuilder.cpp  IRBuilder.h  IRNode.cpp  IRNode.h  IRType.h  builtin.c
src/NaiveASM/: NaiveASMBuilder.cpp  NaiveASMBuilder.h  NaiveASMNode.cpp  NaiveASMNode.h
src/Optimize/ConstantPropagation/: ConstantPropagatior.h
src/Optimize/DeadCodeElimination/: DeadCodeEliminator.h
src/Optimize/Mem2Reg/: CFGBuilder.h  ControlFlowGraph.h  DomTree.h  DomTreeBuilder.h  Mem2RegBuilder.h
src/Optimize/RegAllocation/: LivenessAnalysiser.h  RegisterAllocator.h
src/Semantic/: SemanticChecker.cpp  SemanticChecker.h  SymbolCollector.h  test.cpp
src/Util/: ControlFlowGraph.h  Exception.h  MxErrorLisenor.h  Register.h  Scope.h  Type.h
src/Utils/: CFGBuilder.h  ControlFlowGraph.h  Exception.h  MxErrorListener.h  Register.h
